--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@modelcontextprotocol/sdk": "^1.17.0"
+		"@modelcontextprotocol/sdk": "^1.17.0",
+		"zod": "^3.25.76"
 	}
 }
