--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.22",
     "@inquirer/prompts": "^7.7.1",
     "@modelcontextprotocol/sdk": "^1.17.0",
+    "ai": "^4.3.19",
     "dotenv": "^17.2.1",
     "zod": "^3.25.76"
   }
